--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "spikatsu-shichusuimei-api",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "openai": "^5.12.0"
   }
