--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,7 @@
 {
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "https://saw.anjyanen.com" },
-        { "key": "Access-Control-Allow-Methods", "value": "POST,OPTIONS,GET" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type" },
-        { "key": "Access-Control-Max-Age", "value": "86400" }
-      ]
-    }
-  ]
-}
-{
   "functions": {
-    "api/ai-user-advice.js": { "maxDuration": 60 }
+    "api/ai-user-advice.js": {
+      "maxDuration": 60
+    }
   }
 }
